@@ -4,6 +4,7 @@
 
 * Adding #100 Output format selection (thanks to me)
 * Adding #227 load directory of videos support (thanks to Chris / moonwhaler and a lot of others)
+* Adding #233 Versatile Video Coding (aka x266) support (thanks to F.O.R.A.R.T.)
 * Adding pip builds again allow for `pipx` install
 * Adding #367 safer font defaults (thanks to Archer Allstars)
 * Adding #242 and #400 resolution saves to the profile (thanks to x9sim9)
